# adventofcode2024

./: CMakeLists.txt  day.h  main.cpp
one/: one.cpp  one.h
puzzles/eight/: eight.cpp  eight.h
puzzles/eleven/: eleven.cpp  eleven.h
puzzles/five/: five.cpp  five.h
puzzles/four/: four.cpp  four.h
puzzles/nine/: nine.cpp  nine.h
puzzles/one/: one.cpp
puzzles/seven/: seven.cpp  seven.h
puzzles/six/: six.cpp  six.h
puzzles/ten/: ten.cpp  ten.h
puzzles/three/: three.cpp  three.h
puzzles/two/: two.cpp  two.h
runner/: CMakeLists.txt  runner.cpp  runner.h
utils/: CMakeLists.txt  file_utils.cpp  file_utils.h  string_utils.h
